# general_robot_sdk

./: .gitignore  CMakeLists.txt  MissionControllerPlugin.cpp  MissionEvent.cpp  readme.md
cmake/: super_build.cmake
include/p_rsdk/: PluginInterface.hpp  PluginInterfaceRegister.hpp
include/p_rsdk/plugins/: BasePlugin.hpp  PluginRegister.hpp  StateDelegation.hpp
include/p_rsdk/system/: SystemEventLoop.hpp
include/p_rsdk/tools/: host_time.hpp
include/rsdk/description/: Material.hpp  RobotCmpntDB.hpp  RobotComponent.hpp  RobotDescription.hpp  readme.md
include/rsdk/event/: CollectorEvents.hpp  EventCategory.hpp  LowLayerListerner.hpp  MissionEvents.hpp  PayloadEvents.hpp  REvent.hpp  REventHandler.hpp  REventType.hpp  SystemEvents.hpp  TelemetryEvents.hpp
include/rsdk/message/: base_msg.hpp  base_unit.h
include/rsdk/plugins/: PluginAbstract.hpp  PluginBase.hpp  PluginGlobalRegister.hpp  PluginInterface.hpp  PluginInterfaceRegister.hpp  PluginProxy.hpp
include/rsdk/proxy/: BaseProxy.hpp  PluginsIndex.hpp  Startable.hpp  StateDelegation.hpp
src/: CMakeLists.txt
src/event/: REvent.cpp
src/interfaces/: BasePlugin.cpp
src/mission/: MissionManager.cpp
src/plugins/: BasePlugin.cpp  PluginGlobalRegister.cpp  PluginInterface.cpp  PluginInterfaceRegister.cpp  PluginProxy.cpp  PluginRegister.cpp
src/plugins/camera/: CameraControlPlugin.cpp  VideoStream.cpp  VideoStreamPlugin.cpp
src/plugins/collector/: telemetry_plugin_regist.cpp
src/plugins/gimbal/: GimbalControlPlugin.cpp
src/plugins/mission/: BaseExecutor.cpp  BaseExecutorPlugin.cpp  BaseMIssionControllerPlugin.cpp  Instance.cpp  InstancePlugin.cpp  MissionBlock.cpp  MissionContext.cpp  MissionDescription.cpp  MissionEvent.cpp  MissionTask.cpp
src/plugins/mission/flight/waypoint/: WPMContext.cpp  WPMExecutor.cpp  WPMission.cpp
src/plugins/mission/waypoint/: WPMContext.cpp  WPMControllerPlugin.cpp  WPMExecutorPlugin.cpp  WPMInstancePlugin.cpp  WPMissionPlugin.cpp
src/plugins/sensors/: regist_sensors.cpp
src/plugins/telemetry/: regist_sensors.cpp  telemetry_plugin_regist.cpp
src/proxy/: BaseProxy.cpp
src/proxy/camera/: CameraControlProxy.cpp  VideoStream.cpp
src/proxy/collector/: collector.cpp
src/proxy/gimbal/: GimbalControlProxy.cpp
src/proxy/mission/: BaseExecutor.cpp  MissionContext.cpp  MissionControllerProxy.cpp  MissionDescription.cpp  MissionEvent.cpp  MissionExecutorProxy.cpp  MissionInstanceProxy.cpp
src/proxy/mission/flight/waypoint/: WPMContext.cpp  WPMExecutor.cpp  WPMission.cpp
src/proxy/mission/waypoint/: WPMControllerProxy.cpp  WPMExecutorProxy.cpp  WPMInstanceProxy.cpp  WPMission.cpp  WaypointItems.cpp
src/proxy/telemetry/: regist_sensors.cpp  telemetry.cpp
src/robject/: RObject.cpp
src/system/: PluginMap.cpp  RobotSystem.cpp  RobotSystemConfig.cpp  SystemEventLoop.cpp  SystemInfoPublisher.cpp  SystemManager.cpp
src/tools/math/: LLA2ECEF.cpp  haversine.cpp  vincenty.cpp
systems/: CMakeLists.txt
systems/dji_osdk_based/: CMakeLists.txt  DJICameraManager.cpp  DJICameraManager.hpp  DJIVehicleSystem.cpp  DJIVehicleSystem.hpp  SystemHardSync.cpp  SystemHardSync.hpp  _regist_dji_message.cpp  debian_setup.sh
systems/dji_osdk_based/cmake/: djisystem_compile_option.cmake  findDJIOSDK.cmake
systems/dji_osdk_based/dji_linux_helper/: DJIInitializationTool.cpp  DJIInitializationTool.hpp
systems/dji_osdk_based/plugins/: DJIPluginBase.hpp
systems/dji_osdk_based/plugins/camera/: DJICameraControl.cpp  DJICameraControl.hpp  DJIVideoStream.cpp  DJIVideoStream.hpp
systems/dji_osdk_based/plugins/collector/: DJIAttitude.hpp  DJIAvoid.hpp  DJIBattery.cpp  DJIBattery.hpp  DJIFlightStatus.hpp  DJIGNSS.hpp  DJIGNSSUncertain.hpp  DJIGPSTime.cpp  DJIGPSTime.hpp  DJISensors_Impl.cpp  DJITelemetry.hpp
systems/dji_osdk_based/plugins/gimbal/: DJIGimbalControl.cpp  DJIGimbalControl.hpp
systems/dji_osdk_based/plugins/mission/: DJIActionEvent.hpp  DJIDelegateMemory.hpp  DJIEventWrapper.cpp  DJIEventWrapper.hpp  DJIMissionContext.cpp  DJIMissionContext.hpp  DJIMissionExecutor.cpp  DJIMissionExecutor.hpp  DJIMissionSharedInfo.hpp  DJIWPMController.cpp  DJIWPMController.hpp  DJIWPMInstance.cpp  DJIWPMInstance.hpp  DJIWPMission.cpp  DJIWPMission.hpp  exif.cpp
systems/dji_osdk_based/plugins/mission/interpreter/: InterpretException.hpp  STDWPInterpreter.cpp  STDWPInterpreter.hpp  parse_common_wp.cpp  parse_photo_item.cpp
systems/dji_osdk_based/plugins/mission/tasks/: DJIWPMMainTask.cpp  DJIWPMMainTask.hpp  DownloadPhotoTask.cpp  DownloadPhotoTask.hpp
systems/dji_osdk_based/plugins/sensors/: DJIAttitude.hpp  DJIAvoid.hpp  DJIBattery.cpp  DJIBattery.hpp  DJIFlightStatus.hpp  DJIGNSS.hpp  DJIGNSSUncertain.hpp  DJIGPSTime.cpp  DJIGPSTime.hpp  DJISensors_Impl.cpp  DJITelemetry.hpp
systems/dji_osdk_based/plugins/telemetry/: DJIAttitude.hpp  DJIAvoid.hpp  DJIBattery.cpp  DJIBattery.hpp  DJIFlightStatus.hpp  DJIGNSS.hpp  DJIGNSSUncertain.hpp  DJIGPSTime.cpp  DJIGPSTime.hpp  DJISensors_Impl.cpp  DJITelemetry.hpp
systems/dji_osdk_based/test/: CMakeLists.txt  camera_controll_test.cpp  gimbal_controll_test.cpp  mission_test.cpp  system_time_test.cpp  telemetry_test.cpp  video_stream_test.cpp
systems/mavlink_based/: CMakeLists.txt  MavBasedVehicleSystem.cpp  MavBasedVehicleSystem.hpp
systems/mavlink_based/cmake/: findMAVSDK.cmake
systems/mavlink_based/plugins/collectror/: MavAttitude.cpp  MavAttitude.hpp  MavBasedCollector.cpp  MavBasedCollector.hpp  MavBattery.cpp  MavBattery.hpp  MavFlightStatus.cpp  MavFlightStatus.hpp  MavGNSSReceiver.cpp  MavGNSSReceiver.hpp  MavGNSSUncertain.cpp  MavGNSSUncertain.hpp
systems/mavlink_based/plugins/mission/: MAVCommonDef.hpp  MavMissionDelegateMemory.hpp  MavMissionEventHandler.cpp  MavMissionEventHandler.hpp  MavMissionInstance.cpp  MavMissionInstance.hpp
systems/mavlink_based/plugins/mission/interpreter/: MavWPInterpreter.cpp  MavWPInterpreter.hpp
systems/mavlink_based/plugins/mission/tasks/: MavMainTask.cpp  MavMainTask.hpp
systems/mavlink_based/test/: CMakeLists.txt  mav_link_test.cpp  mav_mission_test.cpp
(+140 files in other folders)
