if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    option(BUILD_DJI_SYSTEM "BUILD_DJI_SYSTEM" OFF)    
    if(BUILD_DJI_SYSTEM)
    SET_SUPERBUILD(${CMAKE_SOURCE_DIR}/third_party/dji_osdk dji_osdk)
        add_subdirectory(dji_osdk_based)
    endif()
else()
    message("DJI_OSDK_BASED_SYSTEM will not be built because it only support linux platform")
endif()

option(BUILD_MAVBASED_SYSTEM "BUILD_MAVBASED_SYSTEM" OFF)
if(BUILD_MAVBASED_SYSTEM)
    SET_SUPERBUILD(${CMAKE_SOURCE_DIR}/third_party/mavsdk mavsdk)
    add_subdirectory(mavlink_based)
endif()


# SET(OSDK_CORE_LIBRARY       ${DJI_OSDK_LIBRARY_DIR}/libdjiosdk-core.a)
# SET(OSDK_ADVANCED_LIBRARY   ${DJI_OSDK_LIBRARY_DIR}/libadvanced-sensing.a)
# SET(OSDK_LINKER_LIBRARY     ${DJI_OSDK_LIBRARY_DIR}/libdji-linker.a)